fix navbar visibility

--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -68,16 +68,16 @@
     color: darkblue;
 }
 
-@media(max-width: 1080px) {
+@media (max-width: 1080px) {
     .logo {
         display: none;
     }
     .menu {
         display: block;
     }
-    .navLinksWrappers {
+    .navLinksWrapper {
         position: absolute;
-        left: 0%;
+        left: 0;
         top: 100%;
         width: 100%;
         background-color: inherit;
@@ -88,15 +88,15 @@
     }
     .navLinks {
         padding-left: 30px;
-        padding-top: 10px;
-        margin-left: 0px;
+        padding-bottom: 10px;
+        margin-left: 0;
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         justify-content: center;
     }
     .navLink {
-        padding: 0px;
+        padding: 0;
         margin: 12px 0;
     }
 }
